Add local run config for intellij and document usage